Bug fix: cursor position shifting on hover over anchor elements
Bug fixed by changing how the cursor position is calculated. Instead of
taking offsetY from the event, the page position for the Y value is
calculated. This allows for hovering over the anchor elements without
position shift becuase offset Y is no longer used

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@
 }
 
 main {
-  margin-top:200px;
+  /* padding-top:200px; */
+  position:relative;
 }
 
 .title {
